config/external-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-service-deployment
spec:
  selector:
    matchLabels:
      app: external-service
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: external-service
    spec:
      containers:
        - name: external-service
          image: nikita99m/external-service
          ports:
            - containerPort: 8090
